# frangilux-desktop

./: .gitignore  README.md  pyproject.toml
frangiluxdesktop/: __main__.py  palette.py
frangiluxdesktop/widgets/: __init__.py  central_widget.py
frangiluxdesktop/widgets/clip_editor/: clip_curve_painter.py  point_editor.py  point_reference_editor.py  point_value_editor.py  viewport.py  widget.py
frangiluxdesktop/widgets/layer_editor/: widget.py
